Fixed issue of profileinfo overlapping notifcation and profile dropdowns

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -62,3 +62,11 @@ body {
 	border-width: 1px;
 	border-color: #595c6d;
 }
+
+.user-dropdown {
+	z-index: 1050;
+}
+
+.notif-dropdown {
+	z-index: 1051;
+}
